--- a/MonoGamePool1/MonoGamePool1.csproj
+++ b/MonoGamePool1/MonoGamePool1.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Button.cs" />
     <Compile Include="Collisions.cs" />
     <Compile Include="Debug.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FileSaving.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GamePlay.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="HighScores.Designer.cs">
       <DependentUpon>HighScores.cs</DependentUpon>
     </Compile>
+    <Compile Include="HighScoresSorting.cs" />
     <Compile Include="Init.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Line.cs" />
@@ -67,6 +69,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="Sort.cs" />
+    <Compile Include="SortingAlgorithms.cs" />
+    <Compile Include="SortingTools.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="TextBox.cs" />
     <Compile Include="Update.cs" />
